<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/editName"
        android:layout_below="@+id/editName"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/pickdate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/editdate"
        android:background="@drawable/ic_action_go_to_today"
        android:onClick="showDatePickerDialog"
        android:text="" />

    <Button
        android:id="@+id/pickTme"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pickdate"
        android:layout_below="@+id/pickdate"
        android:background="@drawable/ic_action_add_alarm"
        android:onClick="showTimePickerDialog"
        android:text="" />

    <EditText
        android:id="@+id/editdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/address"
        android:layout_below="@+id/address"
        android:layout_marginTop="18dp"
        android:layout_toLeftOf="@+id/pickdate"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/date"
        android:inputType="date" >

    </EditText>

    <EditText
        android:id="@+id/editTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pickTme"
        android:layout_alignLeft="@+id/editdate"
        android:layout_toLeftOf="@+id/pickTme"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/time"
        android:inputType="time" />

    <EditText
        android:id="@+id/typeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTime"
        android:layout_alignRight="@+id/editTime"
        android:layout_below="@+id/editTime"
        android:layout_marginTop="28dp"
        android:hint="@string/pick"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/pickTme"
        android:layout_below="@+id/typeView"
        android:layout_marginTop="14dp"
        android:entries="@array/type" />

    <Button
        android:id="@+id/pickLoc"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/typeView"
        android:layout_alignBottom="@+id/typeView"
        android:layout_toRightOf="@+id/typeView"
        android:background="@drawable/ic_action_place"
        android:text="" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/type"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/save" />
    
    </RelativeLayout>